# DAWPresence

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  DAWPresence.spec  LICENSE  README.md  daws.json  format.bat  format.sh  pyproject.toml  requirements.txt  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  stale.yml  virustotal.yml  welcome.yml
DAWPY/: DAWPresence.spec  daw_config.py  daws.json  form.py  main.py  requirements.txt  settings.json  settings.py  setup.py  utils.py
DAWPY/controllers/: __init__.py  app_controller.py  daw_controller.py  discord_controller.py
DAWPY/exceptions/: __init__.py  disc_conn_err.py
DAWPY/models/: __init__.py  daw.py  disc_presence.py  discord_presence.py  settings.py
DAWPY/services/: __init__.py  conf_service.py  configuration.py  discord_service.py  logging_service.py  proc_monitor_service.py  process_monitor.py
DAWPY/tests/: conftest.py  test_controllers.py  test_models.py  test_services.py
DAWPY/views/: __init__.py  dialogs.py  main_window.py  sys_tray_mann.py  tray_icon.py
DAWPY/views/components/: __init__.py  menu_bar.py  status_groups.py  tray_icon_mann.py  tray_menu.py
DAWPresence/: package.json
DAWPresence.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
DAWPresence/src/: app.css
DAWPresence/src-tauri/: Cargo.toml  tauri.conf.json
DAWPresence/src-tauri/src/: daw.rs  discord.rs  lib.rs  logging.rs  main.rs  settings.rs
DAWPresence/src/lib/components/: MenuBar.svelte  StatusBox.svelte
DAWPresence/src/routes/: +page.svelte
scripts/: build.bat  build.ps1  build.sh  clean.bat  clean.ps1  clean.sh
src/: daw.rs  discord.rs  main.rs  settings.rs  tray.rs  ui.rs
src/daw/: mod.rs  platform.rs  unsupported.rs  windows.rs
src/daw/platform/: fallback.rs  linux.rs  windows.rs
