[package]
name = "DAWPresence"
version = "0.1.0"
description = "A Discord Rich Presence client for Digital Audio Workstations (DAWs)"
authors = ["MihaiStreames"]
license = "MIT"
edition = "2021"

[dependencies]
iced = { version = "0.14.0", features = ["tokio", "image"] }
tray-icon = "0.21.2"
notify-rust = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
confy = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
discord-rich-presence = "1.0.0"
sysinfo = "0.37.2"
regex = "1"
image = "0.25"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem",
] }
