[package]
name = "DAWPresence"
version = "2.0.1"
description = "A Discord Rich Presence client for Digital Audio Workstations (DAWs)"
authors = ["MihaiStreames <72852703+MihaiStreames@users.noreply.github.com>"]
license = "MIT"
edition = "2021"

[dependencies]
iced = { version = "0.14.0", default-features = false, features = [
    "crisp",
    "image-without-codecs",
    "tiny-skia",
    "tokio",
] }
tray-icon = "0.21.3"
tracing = { version = "0.1.44", features = ["release_max_level_off"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
confy = "2.0.0"
crossbeam-channel = "0.5.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time"] }
discord-rich-presence = "1.0.0"
sysinfo = "0.37.2"
fancy-regex = "0.17.0"
image = { version = "0.25.9", default-features = false, features = [
    "ico",
    "png",
] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
# style/correctness (like pycodestyle E, W, F)
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
inefficient_to_string = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"

# complexity/simplify (like flake8-simplify SIM)
fn_params_excessive_bools = "warn"
needless_pass_by_value = "warn"
trivially_copy_pass_by_ref = "warn"
unused_self = "warn"
redundant_closure_for_method_calls = "warn"

# performance (like perflint PERF)
redundant_clone = "warn"
