[project]
name = "DAWPresence"
version = "0.1.0"
requires-python = ">=3.13"
description = "A Discord Rich Presence client for Digital Audio Workstations (DAWs)."
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "PyQt5>=5.15.11",
    "pypresence>=4.6.1",
    "psutil>=7.1.3",
    'pywin32>=311; sys_platform == "win32"',
    "setuptools>=80.9.0",
    "loguru>=0.7.3",
    "types-psutil>=7.0.0.20251001",
    "types-setuptools>=80.9.0.20250822",
    'types-pywin32>=311.0.0.20251008; sys_platform == "win32"',
]

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["DAWPY*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "RET",  # flake8-return
    "PL",   # pylint
    "PERF", # perflint
]

ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value comparison
    "RET504",  # Unnecessary assignment before return
    "SIM108",  # Use ternary operator (sometimes reduces readability)
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = true
lines-after-imports = 2
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 15
max-returns = 6
max-statements = 50

[tool.mypy]
python_executable = ".venv/bin/python"
python_version = "3.13"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
